fixed spacing issues

--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@ body {
 }
 
 .header-content, .footer {
-    padding: 0 120px;
     align-items: center;
     background-color: #1F2937;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 350px;
 }
 .header {
     font-weight: 900;
@@ -57,6 +57,7 @@ body {
     background-color: gray;
 }
 .middle {
+    background-color: #F9FAF8;
     padding-bottom: 100px;
     justify-content: center;
     align-items: center;
@@ -115,8 +116,8 @@ body {
     flex-wrap: wrap
 }
 .quote-source {
-    margin-right: 200px;
-    align-self: flex-end;
+    align-self: center;
+    margin-left: 400px;
     font-size: 26px;
     font-weight: bold;
 }
